# Comp696

./: .gitignore  API_USAGE_GUIDE.md  COMPLETE_GUIDE.md  COMPLETE_SYSTEM_GUIDE.md  CONFIGURATION_GUIDE.md  FINAL_PROJECT_SUMMARY.md  FRONTEND_COMPLETE.md  FRONTEND_GUIDE.md  LICENSE  Makefile  NEXT_STEPS.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  TESTING_CHECKLIST.md  demo_script.py  docker-compose.yml  setup.bat  start-dev.bat  stop-dev.bat  verify_setup.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analyst.py  base.py  discovery.py  example_agent.py  generator.py  profiler.py
backend/app/api/v1/: router.py  schemas.py
backend/app/api/v1/endpoints/: companies.py  content.py  discovery.py  intelligence.py  profiles.py  tasks.py
backend/app/core/: config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/services/: cache_service.py  data_collector.py
backend/app/services/enrichers/: __init__.py  clearbit_service.py  hunter_service.py
backend/app/services/scrapers/: __init__.py  linkedin_scraper.py
backend/app/tasks/: __init__.py  agent_tasks.py  celery_app.py
backend/tests/: test_agents.py  test_data_collection.py  test_example.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CompanyCard.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useCompanies.ts
(+7 files in other folders)
