[tool.poetry]
name = "sales-intelligence-agent"
version = "0.1.0"
description = "AI Agent-Driven System for Automated Sales Research"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
celery = "^5.3.0"
redis = "^5.0.0"
langchain = "^0.1.0"
langchain-anthropic = "^0.1.0"
langchain-community = "^0.0.10"
playwright = "^1.40.0"
httpx = "^0.25.0"
spacy = "^3.7.0"
sentence-transformers = "^2.2.0"
pandas = "^2.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
